# noodles

./: .gitignore  Cargo.toml  README.md  build.rs  index.html  noodles-9641de02156c019e_bg.wasm
src/: lib.rs  main.rs  pipelines.rs
src/pipelines/: attributes.rs
src/shaders/: instances.wesl  noise.wgsl  tube.wesl  tube.wgsl  types.wesl
