[package]
name = "noodles"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bytemuck = "1.24.0"
env_logger = "0.11.8"
glam = {version = "0.30.9", features = ["bytemuck"]}
log = "0.4"
pollster = "0.4.0"
wgpu = "27.0.1"
winit = "0.30.12"
web-time = "1.1.0"

[profile.release]
lto = "thin"

[target.'cfg(not(target_arch = "wasm32"))'.profile.release]
strip = "symbols"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}
